chore: add Text

--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -1,14 +1,11 @@
 .handle-comp{
-  border: 1px dashed #eee;
+  border: 1px dashed var(--el-border-color);
 }
 
 .handle-comp:hover{
   border-color: var(--el-color-primary);
 }
 
-.handle-comp:hover .action-area{
-
-}
 .handle-comp.handle-comp--active{
   border-style: solid;
   border-color: var(--el-color-primary);
