feat：add handle comp

--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -1,15 +1,19 @@
 .handle-comp{
-  border: 1px dashed var(--el-border-color);
-  padding: 4px;
+  border: 1px dashed transparent;
+  position: relative;
 }
-
+.handle-comp .handleArea{
+  display: none;
+}
 /* .handle-comp:hover{
   border-color: var(--el-color-primary);
 } */
 
 .handle-comp.handle-comp--active{
-  border-style: solid;
   border-color: var(--el-color-primary);
+}
+.handle-comp.handle-comp--active>.handleArea{
+  display: flex;
 }
 .handle-comp .el-button{
   margin-right: 12px
